<resources>
    <string name="app_name">Learnify</string>
    <string name="welcome_txt">Bem-vindo</string>
    <string name="welcome_detail">Estás pronto para começar uma nova aventura de aprendizagem?</string>
    <string name="startSession">Iniciar Sessão</string>
    <string name="create_account">Criar uma conta</string>
    <string name="copyright_2024_spacelabs">2024 © SpaceLabs</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">Login</string>
    <string name="start_session">Iniciar Sessão</string>
    <string name="email_lbl">Email</string>
    <string name="example_email">example@spacelabs.pt</string>
    <string name="password_lbl">Password</string>
    <string name="goback_lbl"><u>Voltar</u></string>
    <string name="name_lbl">Nome</string>
    <string name="example_name">Walter O\'Brien</string>
    <string name="repeat_password_lbl">Repita a Password</string>
    <string name="create_account_btn">Criar Conta</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="welcomeTxt">Bem-vindo,</string>
    <string name="name">Name</string>
    <string name="txtCourses">Os meus cursos</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="exit">Sair</string>
    <string name="courses_lbl">Cursos</string>
    <string name="profile_lbl">Perfil</string>
    <string name="permissions_lbl">Permissões</string>
    <string name="permissions_request_lbl">Para continuares, por favor, concede as seguintes permissões.</string>
    <string name="request_lbl">Pedir</string>
    <string name="title_activity_permissions">Permissions</string>
    <string name="title_activity_profile">Profile</string>
    <string name="my_profile_lbl">O Meu Perfil</string>
    <string name="change_data_lbl">Alterar Dados</string>
    <string name="permissions_missing">As permissões necessárias não foram concedidas e são obrigatórias. Conceda-as utilizando o botão acima ou nas configurações.</string>
    <string name="title_activity_qrcode">QRCode</string>
    <string name="search_course_code">Pesquisar Curso por QRCode</string>
    <string name="content_class_detail">Conteudo</string>
    <string name="title_activity_class_detail">ClassDetail</string>
    <string name="nearby_txt">Amigos por perto</string>
    <string name="update_list_lbl">Atualizar lista</string>
    <string name="title_activity_nearby">Nearby</string>
    <string name="search_friends_lbl">Pesquisar Amigos</string>
    <string name="title_activity_course_detail">CourseDetail</string>
    <string name="not_found_offline">Não existem conteudos para ver offline, fica online e descarrega cursos para veres onde quiseres!</string>
    <string name="title_activity_player">Player</string>
    <string name="loading_lbl">A processar...</string>
</resources>