<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d8348">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/learnify"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/logoImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_lbl"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:inputType="textPersonName"
            android:hint="@string/example_name" />


        <TextView
            android:id="@+id/txtWelcomeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_lbl"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inpMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:inputType="textEmailAddress"
            android:hint="@string/example_email" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_lbl"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inpPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtRepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password_lbl"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inpRepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_background"
            android:text="@string/create_account_btn"
            android:layout_marginTop="20dp"
            android:textColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/goBackLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:text="@string/goback_lbl" />

    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copyright_2024_spacelabs"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>