<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/learnify_green"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_lbl"
            android:textColor="#f185cf"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" >

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_lbl"
                android:textColor="#444"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#444"
                android:ems="10"
                android:hint="@string/example_name"
                android:inputType="textPersonName"
                android:textColor="#444"
                android:textColorHint="#444" />


            <TextView
                android:id="@+id/txtWelcomeDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_lbl"
                android:textColor="#444"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inpMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#444"
                android:ems="10"
                android:hint="@string/example_email"
                android:inputType="textEmailAddress"
                android:textColor="#444"
                android:textColorHint="#444" />

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password_lbl"
                android:textColor="#444"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inpPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#444"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="#444"
                android:textColorHint="#444" />

            <TextView
                android:id="@+id/txtRepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/repeat_password_lbl"
                android:textColor="#444"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inpRepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#444"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="#444"
                android:textColorHint="#444" />

            <Button
                android:id="@+id/btnChangeData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_color"
                android:text="@string/change_data_lbl"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/btnSearchFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_border_color"
                android:text="@string/search_friends_lbl"
                android:textColor="#444"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:menu="@layout/bottom_menu" />

</LinearLayout>