<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d8348">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/learnify"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/permissions_lbl"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/logoImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:id="@+id/txtWelcomeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/permissions_request_lbl"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPermissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_background"
            android:text="@string/request_lbl"
            android:layout_marginTop="30dp"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/txtRequestPerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions_missing"
            android:textColor="#fff"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPermissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/item_permission" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_2024_spacelabs"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_marginTop="50dp"
            android:textSize="15sp" />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>